<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PinkToru</string>
    <string name="hello_world">Hello world!</string>
	<string name="return_game">返回游戏</string>
    <string name="new_game">新游戏</string>
    <string name="continue_game">继续游戏</string>
    <string name="start_game">开始游戏</string>
    <string name="setting">设置</string>
    <string name="system_setting">系统设置</string>
    <string name="help">帮助</string>
    <string name="exit">退出</string>
    <string name="pintu_mode">拼图模式</string>
    <string name="fill_mode">填图模式</string>
    <string name="swap_mode">组图模式</string>
    <string name="link_mode">连连看模式</string>
    <string name="level">关卡</string>
    <string name="score">成绩</string>
    <string name="step">步数</string>
    <string name="time">时间</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="email">邮箱</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="prize">奖品</string>
    <string name="event">活动</string>
    <string name="ranking">排行榜</string>
    <string name="refresh">刷新</string>
    <string name="update_list">更新列表</string>
    <string name="no_item_in_list">无列表项目，请刷新重试</string>
    <string name="change_prize">更换奖品</string>
    <string name="message_box">信箱</string>
	<string name="btn_ok">确定</string>
	<string name="btn_return">返回</string>
	<string name="btn_review">查看</string>
	<string name="btn_cancel">取消</string>
	<string name="btn_continue">继续</string>
	<string name="btn_apply">应用</string>
	<string name="btn_alt_save">保存模板</string>
	<string name="btn_save">保存</string>
	<string name="label_cancel">撤销</string>
	<string name="label_custom">定制</string>
	<string name="label_local">本地</string>
	<string name="label_piece">碎片</string>
	<string name="label_more">更多</string>
	<string name="label_mode">游戏模式</string>
	<string name="label_col">分行</string>
	<string name="label_row">分列</string>
	<string name="label_base">基本信息</string>
	<string name="label_params">参数信息</string>
	<string name="label_remark">附加信息</string>
	<string name="label_stage">关卡信息</string>
	<string name="label_other">其他信息</string>
	<string name="label_game">游戏信息</string>
	<string name="label_game_image">游戏图片</string>
	<string name="label_game_name">游戏名称</string>
	<string name="label_add_desc">在这里填写介绍文本</string>
	<string name="label_add_memo">在这里填写备注信息</string>
	<string name="local_image">本地图片</string>
	<string name="upload_score">上传成绩</string>
	<string name="setting_level">难易设置</string>
	<string name="setting_effect">效果设置</string>
	<string name="pull_to_refresh_release_label">松开刷新</string>
	<string name="pull_to_refresh_pull_label">拉动刷新</string>
	<string name="pull_to_refresh_refreshing_label">正在刷新</string>
	
</resources>
